--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -21,8 +21,10 @@
                     {% csrf_token %}
                     {{ form.media }}
                     {{ form|crispy}}
-                    <button type="submit" class="ripple-surface w-50 mb-4 btn btn-success"><img class="mr-3"
-                            src="https://img.icons8.com/fluent/32/000000/blog.png" />{{ view_type|title }} Blog</button>
+                    <button type="submit"
+                        class="ripple-surface w-50 mb-4 btn btn-success hover-shadow border border-light"><img
+                            class="mr-3" src="https://img.icons8.com/fluent/32/000000/blog.png" />{{ view_type|title }}
+                        Blog</button>
                 </form>
             </div>
         </div>
