--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -22,7 +22,6 @@
         </div>
     </div>
     <div class="row mx-4">
-        <!-- Blog Entries Column -->
         <div class="col-md-8">
             <div class="ovalpha-overlay">
                 <h1 class="my-4 aw text-red text-center">Featured Blogs</h1>
@@ -71,7 +70,7 @@
             {% if blog.category != 'Members' %}
             {% if screen_size == True %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
+                <div class="card mb-3 border " style="max-width: 830px;">
                     <div class="row no-gutters">
                         <div class="col-md-4 bg-black">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
@@ -79,7 +78,8 @@
                         <div class="col-md-8 bg-black">
                             <div class="card-body bg-black">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
-                                <small class="text-muted">{{ blog.category }}</small>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
@@ -103,16 +103,22 @@
             {% else %}
             {% if not forloop.counter|divisibleby:2  %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
-                    <div class="row no-gutters">
+                <div class="card mb-3 
+                        {% if blog.category  == 'Dieting' %} border border-primary 
+                        {% elif blog.category  == 'Recover' %} border border-warning 
+                        {% elif blog.category  == 'Covid-19' %} border border-danger 
+                        {% elif blog.category  == 'Endurance' %} border border-info
+                        {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                    <div class="row no-gutters ">
                         <div class="col-md-4 bg-black">
-                            <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img"
+                            <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img "
                                 alt="{{ blog.title|title }}">
                         </div>
-                        <div class="col-md-8 bg-black">
-                            <div class="card-body bg-black">
+                        <div class="col-md-8 bg-black ">
+                            <div class="card-body bg-black ">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
-                                <small class="text-muted">{{ blog.category }}</small>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
@@ -135,13 +141,20 @@
             </a>
             {% else %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
+                <div class="card mb-3 
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Members' %} border border-light 
+                {% else %} border border-success {% endif %}" style="max-width: 830px;">
                     <div class="row no-gutters">
 
                         <div class="col-md-8 bg-black">
                             <div class="card-body bg-black">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
-                                <small class="text-muted">{{ blog.category }}</small>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
                                     class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
@@ -164,7 +177,7 @@
                     </div>
                 </div>
             </a>
-            {% endif%}
+            {% endif %}
             {% endif %}
             {% endif %}
             {% endif %}
@@ -193,8 +206,15 @@
                             <div class="col-lg-6">
                                 <ul class="list-unstyled mb-0">
                                     {% for item in category_menu %}
-                                    <a class=" dropdown-item aw text-wht"
-                                        href="{% url 'blog:category' item %}">{{ item }}</a>
+
+                                    <a class=" dropdown-item aw
+                                    {% if item.name  == 'Dieting' %} text-primary 
+                                    {% elif item.name  == 'Recover' %} text-warning 
+                                    {% elif item.name  == 'Covid-19' %} text-danger 
+                                    {% elif item.name  == 'Members' %} text-light 
+                                    {% elif item.name  == 'Endurance' %} text-info
+                                    {% else %} text-success {% endif %}
+                                    " href="{% url 'blog:category' item %}">{{ item }}</a>
                                     {% endfor %}
                                 </ul>
                             </div>
@@ -210,23 +230,25 @@
                                 <ul class="list-unstyled mb-0">
                                     {% for blog in all_blogs %}
                                     {% if blog.category == 'Members' %}
-                                    <small class="text-wht"><i class="fad fa-user mr-2"></i>
-                                        {{ blog.author|title }}</small>
-                                    <a href="{{ blog.get_absolute_url }}">
-                                        <p class="card-title text-center text-wht">{{ blog.title|title }}</p>
-                                    </a>
-                                    <div class="row justify-content-around">
-                                        <div class="text-center text-wht col-md-2"><span><i
-                                                    class="text-grn fad fa-eye"></i>
-                                                {{ blog.get_view_count }}</span></div>
-                                        <div class="text-center text-wht col-md-2"><span><i
-                                                    class="text-primary fad fa-thumbs-up"></i>
-                                                {{ blog.get_like_count }}</span><br></div>
-                                        <div class="text-center text-wht col-md-2"><span><i
-                                                    class="text-ylw fad fa-comments-alt"></i>
-                                                {{ blog.get_comment_count }}</span></div>
-                                    </div>
-                                    <hr>
+                                    <li class=" p-2 border border-light rounded">
+                                        <small class="text-wht"><i class="fad fa-user mr-2"></i>
+                                            {{ blog.author|title }}</small>
+                                        <a href="{{ blog.get_absolute_url }}">
+                                            <p class="card-title text-center text-wht">{{ blog.title|title }}</p>
+                                        </a>
+                                        <div class="row justify-content-around">
+                                            <div class="text-center text-wht col-md-2"><span><i
+                                                        class="text-grn fad fa-eye"></i>
+                                                    {{ blog.get_view_count }}</span></div>
+                                            <div class="text-center text-wht col-md-2"><span><i
+                                                        class="text-primary fad fa-thumbs-up"></i>
+                                                    {{ blog.get_like_count }}</span><br></div>
+                                            <div class="text-center text-wht col-md-2"><span><i
+                                                        class="text-ylw fad fa-comments-alt"></i>
+                                                    {{ blog.get_comment_count }}</span></div>
+                                        </div>
+                                        <hr>
+                                    </li>
                                     {% endif %}
                                     {% endfor %}
                                 </ul>
