added profile namespace

--- a/profiles/templates/profiles/cancel_sub_confirm.html
+++ b/profiles/templates/profiles/cancel_sub_confirm.html
@@ -12,7 +12,7 @@
                 <h4 class="text-warning aw text-center">Are you sure you want to Cancel your Subscription
 
                 </h4>
-                <span><a href="{% url 'profile' %}"
+                <span><a href="{% url 'profiles:profile' %}"
                         class="aw text-wht mt-3 w-100 btn btn-success text-bk border border-white">No.
                         Take me
                         back to Dashboard </a></span>
