--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -15,7 +15,7 @@
             <div class="col-md-12 mb-0">
                 <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
-                <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
+                <a class="text-wht aw pl-2" href="{% url 'profiles:profile' %}">Dashboard</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">{% trans "Password Reset" %}</small>
             </div>
