--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block head_title %} - Programs | {{ object.title }} {% endblock head_title %}
+{% block head_title %} - Programs | {{ programs.title }} {% endblock head_title %}
 
 {% block content %}
 
@@ -11,25 +11,25 @@
             <div class="col-md-12 mb-0">
                 <a class="text-wht aw pl-2" href="{% url 'programs:list' %}">Programs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
-                <small class="text-wht aw">{{ object.title }}</small>
+                <small class="text-wht aw">{{ programs.title }}</small>
             </div>
         </div>
     </div>
     <div class="container profile">
         <div class="profile-overlay">
             <div class="col p-4">
-                <h4 class="text-wht aw display-4 text-center">{{ object.title }}</h4>
+                <h4 class="text-wht aw display-4 text-center">{{ programs.title }}</h4>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="text-wht pt-2 col-md-8 col-12  bg-black-a rounded-15">
-                    <p>{{ object.description|safe }}</p>
+                    <p>{{ programs.description|safe }}</p>
                 </div>
                 <div class=" pt-2 col-md-4 col-12 bg-black-a rounded-15">
-                    <h4 class="text-center aw text-ylw">{{ object.title }} Videos</h4><br>
+                    <h4 class="text-center aw text-ylw">{{ programs.title }} Videos</h4><br>
                     <ul class="aw text-wht">
-                        {% for workout in object.workouts %}
+                        {% for workout in programs.workouts %}
                         <li>
                             <a href="{{ workout.get_absolute_url }}">
                                 <h5 class="aw text-wht ">{{ workout.title }}</h5>
