--- a/cart/templates/cart/includes/cart-total.html
+++ b/cart/templates/cart/includes/cart-total.html
@@ -1,27 +1,27 @@
 <div class="container cart-total-container">
     <div class="row mb--1">
-        <h6 class="text-center pr-3 col-6 aw">Cart Total:</h6>
-        <p class="text-right col-6 " underline">${{ cart_total|floatformat:2 }}</p>
+        <h6 class="text-left pl-4 col-6 aw">Cart Total:</h6>
+        <p class="text-right pr-4 col-6 " underline">${{ cart_total|floatformat:2 }}</p>
     </div>
     <div class="row mb--1">
-        <h6 class="text-center pr-3 col-6 aw">Discount:</h6>
-        <p class="text-right col-6">${{ discount|floatformat:2 }}</p>
+        <h6 class="text-left pl-4 col-6 aw">Discount: <span class="mont_r">@{{ sub_discout }}%</span></h6>
+        <p class="text-right pr-4 col-6">${{ discount|floatformat:2 }}</p>
     </div>
     <div class="row mb--1">
-        <h6 class="text-center pr-3 col-6 aw">Sub total:</h6>
-        <p class="text-right col-6 underline">${{ sub_total|floatformat:2 }}</p>
+        <h6 class="text-left pl-4 col-6 aw">Sub total:</h6>
+        <p class="text-right pr-4 col-6 underline">${{ sub_total|floatformat:2 }}</p>
     </div>
     <div class="row mb--1">
-        <h6 class="text-center pr-3 col-6 aw">Delivery: </h6>
-        <p class="text-right col-6">${{ delivery|floatformat:2 }}</p>
+        <h6 class="text-left pl-4 col-6 aw">Delivery: </h6>
+        <p class="text-right pr-4 col-6">${{ delivery|floatformat:2 }}</p>
     </div>
     <div class="row mb--1">
-        <h6 class="text-center pr-3 col-6 pr-5 aw">TAX: </h6>
-        <p class="text-right col-6">${{ tax|floatformat:2 }}</p>
+        <h6 class="text-left pl-4 col-6 pr-5 aw">Tax: <span class="mont_r">@{{ tax_rate }}%</span></h6>
+        <p class="text-right pr-4 col-6">${{ tax|floatformat:2 }}</p>
     </div>
-    <div class="row mb--1">
-        <h5 class="text-center pr-3 col-6 aw">Grand Total: </h5>
-        <p class="text-right col-6 underline">${{grand_total|floatformat:2 }}</p>
+    <div class="row mb-1">
+        <h5 class="text-left pl-4 col-6 aw">Grand Total: </h5>
+        <p class="text-right pr-4 col-6 underline aw">${{grand_total|floatformat:2 }}</p>
     </div>
 
 </div>
