added new test to marketing app

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -111,7 +111,7 @@
                 </fieldset>
                 <fieldset class="px-3">
 
-                    <img src="https://img.icons8.com/color/48/000000/stripe.png" />
+                    <i class="text-wht fab fa-stripe fa-2x"></i>
                     <!-- A Stripe card element will go here -->
                     <div class="mb-2" id="card-element"></div>
                     <!-- Used to display form errors -->
