--- a/blog/templates/blog/blog_categories.html
+++ b/blog/templates/blog/blog_categories.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
+{% load user_agents %}
 
 {% block head_title %} - Blog | Categories {% endblock head_title %}
 {% block content %}
@@ -11,29 +13,81 @@
         <div class="col-md-8">
             {% if category_blogs %}
             <div class="ovalpha-overlay bg-black-a rounded-10">
-                <h2 class="my-4 aw text-primary text-center">{{ category }} Blogs</h2>
+                <h2 class="my-4 aw text-primary text-center 
+                {% if category  == 'Dieting' %} text-primary 
+                {% elif category  == 'Recover' %} text-warning 
+                {% elif category  == 'Covid-19' %} text-danger 
+                {% elif category  == 'Members' %} text-light 
+                {% elif category  == 'Endurance' %} text-info
+                {% else %} text-success {% endif %}">{{ category }} Blogs</h2>
             </div>
             {% for blog in category_blogs %}
-            {% if not forloop.counter|divisibleby:2  %}
+            {% if screen_size == True %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
-                    <div class="row no-gutters">
+                <div class="card mb-3 border rounded
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% else %} border border-success {% endif %}"" style=" max-width: 830px;">
+                    <div class="row no-gutters rounded">
                         <div class="col-md-4 bg-black">
-                            <img src="{{ blog.thumbnail.url }}" class="card-img" alt="...">
+                            <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
                         </div>
-                        <div class="col-md-8 bg-black">
-                            <div class="card-body bg-black">
+                        <div class="col-md-8 bg-black rounded">
+                            <div class="card-body bg-black rounded">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
-                                <div class="row justify-content-around">
-                                    <div class="text-center text-wht col-md-2"><span><i class="text-grn fad fa-eye"></i>
+                                <div class="row w-100 justify-content-around">
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-primary fad fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
+                                                class="text-ylw fad fa-comments-alt"></i>
+                                            {{ blog.get_comment_count }}</span></div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </a>
+            {% else %}
+            {% if not forloop.counter|divisibleby:2  %}
+            <a href="{{ blog.get_absolute_url }}">
+                <div class="card mb-3 rounded
+                        {% if blog.category  == 'Dieting' %} border border-primary 
+                        {% elif blog.category  == 'Recover' %} border border-warning 
+                        {% elif blog.category  == 'Covid-19' %} border border-danger 
+                        {% elif blog.category  == 'Endurance' %} border border-info
+                        {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                    <div class="row no-gutters rounded">
+                        <div class="col-md-4 bg-black rounded">
+                            <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img "
+                                alt="{{ blog.title|title }}">
+                        </div>
+                        <div class="col-md-8 bg-black rounded">
+                            <div class="card-body bg-black rounded-right">
+                                <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
+                                <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
+                                <span class="text-mute float-right"><small class="text-muted"> Posted:
+                                        {{ blog.publish_date|timesince }}</small></span>
+                                <div class="row w-100 justify-content-around">
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
+                                            {{ blog.get_view_count }}</span></div>
+                                    <div class="text-center text-wht col-2"><span><i
+                                                class="text-primary fad fa-thumbs-up"></i>
+                                            {{ blog.get_like_count }}</span><br></div>
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-ylw fad fa-comments-alt"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
@@ -46,33 +100,42 @@
             </a>
             {% else %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
-                    <div class="row no-gutters">
-
-                        <div class="col-md-8">
-                            <div class="card-body  bg-black-a">
+                <div class="card mb-3 rounded
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Members' %} border border-light 
+                {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                    <div class="row no-gutters rounded">
+                        <div class="col-md-8 bg-black rounded-left">
+                            <div class="card-body bg-black rounded-left">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <small class="text-muted"><i
+                                        class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
                                     class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
-                                <div class="row justify-content-around">
-                                    <div class="text-center text-wht col-md-2"><span><i class="text-grn fad fa-eye"></i>
+                                <div class="row w-100 justify-content-around">
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-primary fad fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-ylw fad fa-comments-alt"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <img src="{{ blog.thumbnail.url }}" class="card-img" alt="...">
+                        <div class="col-md-4 bg-black rounded">
+                            <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img"
+                                alt="{{ blog.title|title }}">
                         </div>
                     </div>
                 </div>
             </a>
+            {% endif %}
             {% endif %}
             {% endfor %}
         </div>
@@ -84,8 +147,8 @@
                 <div class="card-body mx-auto ">
                     <div class="input-group">
                         <form method="GET" action="{% url 'blog:list' %}" class="form-inline my-2 my-lg-0">
-                            <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
-                                aria-label="Search">
+                            <input class="aw w-75 form-control mr-sm-2" name="s" type="search"
+                                placeholder="Search Blogs" aria-label="Search">
                             <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
                         </form>
                     </div>
@@ -93,17 +156,25 @@
 
                 <!-- Categories Widget -->
                 <div class="card my-4">
-                    <h5 class="aw text-center text-wht card-header bg-green">Categories</h5>
+                    <h5 class="aw text-center card-header text-wht bg-green">Categories</h5>
                     <div class="card-body bg-black-a">
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul class="list-unstyled mb-0">
                                     {% for item in category_menu %}
-                                    <a class="text-wht dropdown-item aw"
-                                        href="{% url 'blog:category' item %}">{{ item }}</a>
+
+                                    <a class=" dropdown-item aw
+                                    {% if item.name  == 'Dieting' %} text-primary 
+                                    {% elif item.name  == 'Recover' %} text-warning 
+                                    {% elif item.name  == 'Covid-19' %} text-danger 
+                                    {% elif item.name  == 'Members' %} text-light 
+                                    {% elif item.name  == 'Endurance' %} text-info
+                                    {% else %} text-success {% endif %}
+                                    " href="{% url 'blog:category' item %}">{{ item }}</a>
                                     {% endfor %}
                                 </ul>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -127,11 +198,12 @@
             <div class="row d-flex flex-row">
                 <div class="col-12">
                     <span>
-                        <a class=" my-2 w-100 text-wht aw px-4 btn btn-warning" href="{% url 'blog:list' %}">Back to
+                        <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-warning"
+                            href="{% url 'blog:list' %}">Back to
                             Blogs<i class="pl-3 fad fa-undo"></i></a>
                     </span>
                     <span>
-                        <a class="my-2 w-100 text-wht aw px-4 btn btn-success" href="{% url 'home' %}"><i
+                        <a class="ripple-surface my-2 w-100 text-wht aw px-4 btn btn-success" href="{% url 'home' %}"><i
                                 class="pr-3 fad fa-home"></i>Home</a>
                     </span>
 
@@ -145,4 +217,12 @@
 </div>
 {% endif %}
 
-{% endblock content %}
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+
+<script>
+    var cat = document.getElementsByClassName("someclassname");
+</script>
+{% endblock postloadjs %}
