--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load user_agents %}
 {% block head_title %} - Blogs | Search {% endblock head_title %}
 {% block content %}
 
@@ -30,14 +30,20 @@
 
             {% for blog in all_blogs %}
             {% if screen_size == True %}
+
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4 bg-black-a">
+                <div class="card mb-3 border rounded
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% else %} border border-success {% endif %}" style=" max-width: 830px;">
+                    <div class="row no-gutters rounded">
+                        <div class="col-md-4 bg-black rounded">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body bg-black-a">
+                        <div class="col-md-8 rounded">
+                            <div class="card-body bg-black rounded">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
                                 <small class="text-muted">{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
@@ -63,13 +69,18 @@
             {% else %}
             {% if not forloop.counter|divisibleby:2  %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
+                <div class="card mb-3 border rounded
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% else %} border border-success {% endif %}" style="max-width: 830px;">
                     <div class="row no-gutters">
-                        <div class="col-md-4 bg-black-a">
+                        <div class="col-md-4 bg-black">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
                         </div>
                         <div class="col-md-8">
-                            <div class="card-body bg-black-a">
+                            <div class="card-body bg-black">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
                                 <small class="text-muted">{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
@@ -92,10 +103,15 @@
             </a>
             {% else %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3" style="max-width: 830px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-8">
-                            <div class="card-body  bg-black-a">
+                <div class="card mb-3 border rounded
+                {% if blog.category  == 'Dieting' %} border border-primary 
+                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Covid-19' %} border border-danger 
+                {% elif blog.category  == 'Endurance' %} border border-info
+                {% else %} border border-success {% endif %}" style="max-width: 830px;">
+                    <div class="row no-gutters rounded">
+                        <div class="col-md-8 rounded">
+                            <div class="card-body bg-black rounded">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
                                     class="text-mute float-right"><small class="text-muted"> Posted:
@@ -112,7 +128,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 rounded">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
                         </div>
                     </div>
@@ -143,8 +159,8 @@
                 <div class="card-body mx-auto ">
                     <div class="input-group">
                         <form method="GET" action="{% url 'blog:list' %}" class="form-inline my-2 my-lg-0">
-                            <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
-                                aria-label="Search">
+                            <input class="aw w-75 form-control mr-sm-2" name="s" type="search"
+                                placeholder="Search Blogs" aria-label="Search">
                             <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
                         </form>
                     </div>
@@ -158,8 +174,14 @@
                             <div class="col-lg-6">
                                 <ul class="list-unstyled mb-0">
                                     {% for item in category_menu %}
-                                    <a class=" dropdown-item aw text-wht"
-                                        href="{% url 'blog:category' item %}">{{ item }}</a>
+                                    <a class=" dropdown-item aw
+                                    {% if item.name  == 'Dieting' %} text-primary 
+                                    {% elif item.name  == 'Recover' %} text-warning 
+                                    {% elif item.name  == 'Covid-19' %} text-danger 
+                                    {% elif item.name  == 'Members' %} text-light 
+                                    {% elif item.name  == 'Endurance' %} text-info
+                                    {% else %} text-success {% endif %}
+                                    " href="{% url 'blog:category' item %}">{{ item }}</a>
                                     {% endfor %}
                                 </ul>
                             </div>
