--- a/cart/templates/cart/includes/adjust_cart.html
+++ b/cart/templates/cart/includes/adjust_cart.html
@@ -17,12 +17,12 @@
         </div>
     </form>
 
-    <a class="px-2  update-link text-info hover-shadow-lite vert-aline" title="Update Cart Qty">
-        <img class="pb-1" src="https://img.icons8.com/fluent/38/000000/available-updates.png" /></a>
+    <a class="px-2  update-link text-info hover-shadow-col-lit rounded vert-aline" title="Update Cart Qty">
+        <img class="" src="https://img.icons8.com/fluent/38/000000/available-updates.png" alt="Refresh" /></a>
 
-    <a class="btt-link remove-item text-danger hover-shadow  vert-aline" id="remove_{{ item.item_id }}"
+    <a class="btt-link remove-item text-danger hover-shadow-col-lit rounded vert-aline" id="remove_{{ item.item_id }}"
         data-product_size="{{ item.size }}"
         title="Delete {% if item.product.has_sizes %}{{ item.product.name }} - {{ item.size|upper  }}{% else %}{{ item.product.name }}{% endif %}">
-        <img src="https://img.icons8.com/plasticine/40/000000/filled-trash.png" />
+        <img class="px-1" src="https://img.icons8.com/plasticine/40/000000/filled-trash.png" alt="Bin" />
     </a>
 </div>
