--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -22,9 +22,9 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="aw text-wht mb-4 text-center">
+                <h1 class="aw text-wht mb-4 text-center">
                     Shopping Cart
-                </h2>
+                </h1>
             </div>
         </div>
 
@@ -142,7 +142,7 @@
         </div>
     </div>
 </div>
-</div>
+
 
 {% endblock content %}
 
@@ -171,5 +171,7 @@
                 location.reload();
             });
     })
-</script>}
+</script>
+
+
 {% endblock postloadjs %}
