changes minit cart id to mini_cart

--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,4 @@
-<div class="toast border border-primary custom-toast rounded-10" data-autohide="true" data-delay="3000"
+<div class="toast border border-primary custom_toast rounded-10" data-autohide="true" data-delay="5000"
     data-animation="true">
 
     <div class="toast-header bg-black-a  text-wht">
