--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -4,7 +4,7 @@
 <div class="container-fluid bg-black">
     <div class="row ">
         <div class="col-md-12 mb-0  text-right">
-            <div id="cart" class="mr-md-4">
+            <div id="mini_cart" class="mr-md-4">
 
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_staff %}
