--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,4 +1,4 @@
-<div class="toast border border-danger custom_toast rounded-10" data-autohide="false" data-delay="5000"
+<div class="toast border border-danger   rounded-10" data-autohide="false" data-delay="5000"
     data-animation="true">
 
     <div class="toast-header bg-black-a  text-wht">
