--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,4 +1,4 @@
-<div class="toast border border-warning custom_toast rounded-10" data-autohide="true" data-delay="5000"
+<div class="toast border border-warning   rounded-10" data-autohide="true" data-delay="5000"
     data-animation="true">
 
     <div class="toast-header bg-black-a text-wht">
